# rsim

./: Cargo.toml
core/: Cargo.toml
core/src/: clock_event.rs  component.rs  event.rs  lib.rs  macros.rs  sim_manager.rs  task.rs
core/src/simple_component/: simple_event.rs  simple_link.rs  simple_loopback.rs  simple_receiver.rs  simple_sender.rs
core/tests/: mod.rs  simple_test.rs
macro/: Cargo.toml
macro/src/: lib.rs
rv32i/: Cargo.toml
rv32i/src/: main.rs
rv32i/src/backend/: core.rs
rv32i/src/backend/component/: alu.rs  cmp.rs  control.rs  data_out.rs  ir.rs  mar.rs  mdr.rs  mem_ctl.rs  mod.rs  pc.rs  regfile.rs
rv32i/src/backend/util/: blackhole.rs  byte.rs  event.rs  types.rs
rv32i/tests/: dump.sh
unicore/: Cargo.toml
unicore/src/: byte.rs  control.rs  core.rs  ir.rs  main.rs  mem_ctl.rs  mmio_ctl.rs  mmio_driver.rs  regfile.rs  types.rs  util.rs
